spacing bug with animations and decreased size of IntroLogo on mobile

--- a/src/components/IntroLogo/styles.scss
+++ b/src/components/IntroLogo/styles.scss
@@ -4,8 +4,6 @@ $purple: #9147ff;
 	border: 0;
 	box-sizing: border-box;
 	margin: 0;
-	height: 12rem;
-	width: 12rem;
 	padding: 7rem;
 	display: flex;
 	justify-content: left;
@@ -88,6 +86,10 @@ $purple: #9147ff;
 @media (max-width: 480px) {
 	.logo-home {
 		margin-top: 5rem;
+		height: 12rem;
+		width: 12rem;
+		padding: 6rem;
+		font-size: 80px;
 	}
 }
 
@@ -95,6 +97,8 @@ $purple: #9147ff;
 @media (min-width: 480px) {
 	.logo-home {
 		margin-top: 7.5rem;
+		height: 15rem;
+		width: 15rem;
 	}
 }
 
